// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instrument details panel component gracefully handles InstrumentScientists without Users 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "description": "An instrument purely for testing",
    "fullName": "Test Instrument",
    "id": 1,
    "instrumentScientists": Array [
      Object {
        "id": 4,
      },
    ],
    "name": "Test",
    "type": "testing",
    "url": "www.example.com",
  },
}
`;

exports[`Instrument details panel component renders correctly 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "description": "An instrument purely for testing",
    "fullName": "Test Instrument",
    "id": 1,
    "name": "Test",
    "type": "testing",
    "url": "www.example.com",
  },
}
`;

exports[`Instrument details panel component renders users tab when present in the data 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "description": "An instrument purely for testing",
    "fullName": "Test Instrument",
    "id": 1,
    "instrumentScientists": Array [
      Object {
        "id": 4,
        "user": Object {
          "fullName": "Louise Davies",
          "id": 5,
          "name": "Louise",
        },
      },
      Object {
        "id": 9,
        "user": Object {
          "id": 10,
          "name": "Louise",
        },
      },
    ],
    "name": "Test",
    "type": "testing",
    "url": "www.example.com",
  },
}
`;
